--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       WELCOME to Speech Processing Laboratory (SPL)
     </p>
     <p>
-      SPL is one of the research laboratories of Computer Engineering Department
+      SPL is one of the research laboratories of computer Engineering Department
       of Sharif University Of Technology. The main area of the research in this
       Lab is Digital Signal Processing, specially Speech signals. Speech
       Recognition is the major field of activity for this group and a speech
